unpackaged/main/default/objects/APXTConga4__Composer_QuickMerge__c/APXTConga4__Composer_QuickMerge__c.object-meta.xml
<CustomObject>
    <label>Conga Global Merge</label>
    <nameField>
        <label>Conga Global Merge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conga Global Merges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>