unpackaged/main/default/objects/APXTConga4__Composer_QuickMerge__c/fields/APXTConga4__Conga_Solution__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Conga_Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conga Solution</label>
    <referenceTo>APXTConga4__Conga_Solution__c</referenceTo>
    <relationshipName>Composer_QuickMerge_Records</relationshipName>
    <type>Lookup</type>
</CustomField>